[gd_scene load_steps=14 format=3 uid="uid://clwmqhmciiy2"]

[ext_resource type="Script" path="res://music.gd" id="1_nijgs"]
[ext_resource type="AudioStream" uid="uid://b0kqdx10yimkt" path="res://Music & sfx/Echoes-of-Time-v2(chosic.com).mp3" id="2_dn8s7"]
[ext_resource type="AudioStream" uid="uid://dqfprdrybw0wb" path="res://Music & sfx/hero_jump.wav" id="3_a5fp7"]
[ext_resource type="AudioStream" uid="uid://ct2hp5d406vob" path="res://Music & sfx/00000058.ogg" id="4_tfkwl"]
[ext_resource type="AudioStream" uid="uid://xjmwwybsa2fw" path="res://Music & sfx/hero_run_footsteps_water.wav" id="5_8sgjk"]
[ext_resource type="AudioStream" uid="uid://bdl8m0mupbckh" path="res://Music & sfx/Water_Drops.wav" id="6_atbni"]
[ext_resource type="AudioStream" uid="uid://571k73p6omb" path="res://Music & sfx/Sword_Unsheath.wav" id="6_xjfyu"]
[ext_resource type="AudioStream" uid="uid://b1r0owww1n86r" path="res://Music & sfx/Sword_Whoosh2.wav" id="7_a65j5"]
[ext_resource type="AudioStream" uid="uid://3w60ip0h0ohj" path="res://Music & sfx/hero_dream_nail_short_charge.wav" id="7_kgtej"]
[ext_resource type="AudioStream" uid="uid://cabhdcuu35urx" path="res://Music & sfx/Sword_Whoosh.wav" id="8_5eh5j"]
[ext_resource type="AudioStream" uid="uid://x8oxub3f7crh" path="res://Music & sfx/hero_land_hard_02.wav" id="9_ymy88"]
[ext_resource type="AudioStream" uid="uid://db1ddon7s6ra5" path="res://Music & sfx/hero_super_dash_burst.wav" id="12_1k4te"]
[ext_resource type="AudioStream" uid="uid://b87xhct7aidiq" path="res://Music & sfx/falling-bones-87568.mp3" id="13_evus2"]

[node name="MusicController" type="Node"]
script = ExtResource("1_nijgs")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dn8s7")
parameters/looping = true

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_a5fp7")

[node name="changescene" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tfkwl")

[node name="run" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8sgjk")

[node name="attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xjfyu")

[node name="attack2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_a65j5")

[node name="attack3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5eh5j")

[node name="air_attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tfkwl")

[node name="heal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kgtej")

[node name="waterDrops" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_atbni")
volume_db = -21.549

[node name="landing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ymy88")

[node name="Fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_1k4te")

[node name="bones" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_evus2")
